<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFrameL"
    tools:context=".Main2Activity">

    <ImageView
        android:id="@+id/imagem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@mipmap/imagem_inicio_background" />
    <EditText

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_inicio"
        android:layout_gravity="center_horizontal"
        android:inputType="numberDecimal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@color/colorLinearL1"
        >

        <EditText
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edit_Potência"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edit_horaCons"
            android:textColor="@color/colorTexto"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edit_diasCons"
            android:textColor="@color/colorTexto"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorTexto"
            android:hint="@string/edit_Tarifa"
            android:inputType="numberDecimal"
            />
        <Button
           android:id="@+id/btcal1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTexto"
            android:layout_gravity="center"
            android:text="@string/btcalculaconsumo"
            android:background="@color/colorBotoes"
            />
    </LinearLayout>

</FrameLayout>